<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VTRON显控一体化系统管理软件</string>
    <string name="title_activity_login">VTRON显控一体化系统管理软件</string>
    <string name="title_recycler">VTRON显控一体化系统管理软件</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">该Email地址无效</string>
    <string name="error_invalid_password">该密码无效</string>
    <string name="error_incorrect_password">该密码不正确</string>
    <string name="error_sign_in">请输入有效信息，或与VTRON人员联系</string>
    <string name="error_field_required">请输入有效信息</string>
    <string name="permission_rationale">请提供完整Email，或使用有效信息</string>
    <string name="setting">设置</string>
    <string name="action_vclord_connect">获取系统信息</string>
    <string name="point">.</string>
    <string name="error_no_system">系统未知</string>
    <string name="error_network">网路连接错误</string>
    <string name="operation_signal_no_exist">该信号源不存在，请切换其他信号源</string>
    <string name="error_not_save_model_yet">还未保存该模式信息</string>
    <string name="about">关于APP</string>
    <string name="CopyRightDescribe"></string>
    <string name="ColTouchVersion">VTRON显控一体化系统管理软件 V0.5</string>
    <string name="prf_generation">通用信息</string>
    <string name="prf_data">系统信息</string>
    <string name="pref_gen_default_display_name">admin@vtron.com</string>
    <string name="pref_gen_display_name">用户名</string>
    <string name="pref_data_default_sid">1</string>
    <string name="pref_data_sid">系统ID</string>
    <string name="pref_data_default_row">1</string>
    <string name="pref_data_row">行数</string>
    <string name="pref_data_default_col">1</string>
    <string name="pref_data_col">列数</string>
    <string name="pref_data_default_vclordip">172.16.129.111</string>
    <string name="pref_data_vclordip">IP地址</string>
    <string name="pref_setting">基本信息</string>
    <string name="pref_define_scene">DefineScene</string>
    <string name="pref_default_num">default_num_</string>
    <string name="pref_default_startX_">default_startX_</string>
    <string name="pref_default_startY_">default_startY_</string>
    <string name="pref_default_endX_">defaultendX_</string>
    <string name="pref_default_endY_">default_endY_</string>
    <string name="pref_define1_flag">define1_flag</string>
    <string name="pref_define2_flag">define2_flag</string>
    <string name="pref_define1_num">define1_num</string>
    <string name="pref_define2_num">define2_num</string>
    <string name="pref_define1_startX_">define1_startX_</string>
    <string name="pref_define1_startY_">define1_startY_</string>
    <string name="pref_define1_endX_">define1_endX_</string>
    <string name="pref_define1_endY_">define1_endY_</string>
    <string name="pref_define2_startX_">define2_startX_</string>
    <string name="pref_define2_startY_">define2_startY_</string>
    <string name="pref_define2_endX_">define2_endX_</string>
    <string name="pref_define2_endY_">define2_endY_</string>
    <string name="pref_default_signal_">default_signal_</string>
    <string name="pref_define1_signal_">define1_signal_</string>
    <string name="pref_define2_signal_">define2_signal_</string>
    <string name="pref_default_model_signal_">default_model_signal_</string>
    <string name="pref_define1_model_signal_">define1_model_signal_</string>
    <string name="pref_define2_model_signal_">define2_model_signal_</string>
    <string name="pref_video_cell_list">VideoCellList</string>
    <string name="pref_cubeNum">cubeNum</string>
    <string name="pref_cubeId">cubeId</string>
    <string name="pref_posX">posX</string>
    <string name="pref_posY">posY</string>
    <string name="pref_width">width</string>
    <string name="pref_height">height</string>
    <string name="pref_LastSceneIndex">last_scene_index</string>
    <string name="pref_LastSignalIndex">last_signal_index</string>
    <string name="pref_whole_scene">whole_scene</string>
    <string name="pref_each_scene">each_scene</string>
    <string name="pref_h2part_scene">h2part_scene</string>
    <string name="pref_v2part_scene">v2part_scene</string>
    <string name="pref_signal_window_count">signal_window_num</string>
    <string name="pref_pix_x">cube_pix_x</string>
    <string name="pref_pix_y">cube_pix_y</string>
    <string name="pref_input_id_">input_board_id_</string>
    <string name="pref_input_all_sig_">input_all_sig_</string>
    <string name="pref_signal_output_board_window_num_">input_board_num_</string>
    <string name="pref_signal_flag">signal_flag_</string>
    <string name="pref_set_network">网络设置</string>
    <string name="pref_defined_model_flag_">defined_model_flag_</string>
    <string name="pref_defined_model_scene_">defined_model_scene_</string>
    <string name="pref_color_mode_name_">color_mode_name_</string>
    <string name="pref_model_scene_signal_name_">model_scene_signal_name_</string>
    <string name="pref_signal_name_">signal_name_</string>
    <string name="pref_get_system_info">状态查询</string>
    <string name="pref_model_guide_flag">model_guide_flag</string>
    <string name="pref_model_guide_step">model_guide_step</string>
    <string name="pref_model_guide_last_scene_index">model_guide_last_scene_index</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">黑色背景</string>
    <string name="scene_list">显示布局</string>
    <string name="signal_list">信号列表</string>
    <string name="power_list">系统开关</string>
    <string name="getSystemInfo">信息查询</string>
    <string name="model_SceneAndSignal">场景模式</string>
    <string name="error_invalid_ip">IP地址不正确</string>
    <string name="check_system"> </string>
    <string name="progress_check_system">正在获取系统信息</string>
    <string name="progress_power">正在进行开关机</string>
    <string name="define_scene_finished">操作完成</string>
    <string name="VCLORD_IP">VCLORD IP</string>
    <string name="SystemInfo">系统信息</string>
    <string name="system_id">系统</string>
    <string name="system_row">行</string>
    <string name="system_col">列</string>
    <string name="operation_finished">操作完成</string>
    <string name="operation_failed">操作失败</string>
    <string name="error_open_signal_failed">信号开窗失败</string>
    <string name="error_close_signal_failed">信号关窗失败</string>
    <string name="error_signal_larger_than_max">超过单采集卡最大开窗数，请先关窗再开窗</string>

    <string name="DVI_1_1">1-DVI_1</string>
    <string name="DVI_1_2">1-DVI_2</string>
    <string name="HDMI_1">1-HDMI</string>
    <string name="DP_1">1-DP</string>
    <string name="DVI_2_1">2-DVI_1</string>
    <string name="DVI_2_2">2-DVI_2</string>
    <string name="HDMI_2">2-HDMI</string>
    <string name="DP_2">2-DP</string>
    <string name="DVI_3_1">3-DVI_1</string>
    <string name="DVI_3_2">3-DVI_2</string>
    <string name="HDMI_3">3-HDMI</string>
    <string name="DP_3">3-DP</string>
    <string name="DVI_4_1">4-DVI_1</string>
    <string name="DVI_4_2">4-DVI_2</string>
    <string name="HDMI_4">4-HDMI</string>
    <string name="DP_4">4-DP</string>
    <string name="clear">清除</string>

    <string name="scene_whole">整墙</string>
    <string name="scene_h2part">H-二分</string>
    <string name="scene_v2part">V-二分</string>
    <string name="scene_each">单屏</string>
    <string name="scene_define1">自定义2</string>
    <string name="scene_define2">自定义1</string>
    <string name="confirm">确认</string>
    <string name="power_on">整墙开机</string>
    <string name="power_off">整墙关机</string>
    <string name="get_interface_version">控制盒版本</string>
    <string name="get_interface_status">控制盒状态</string>
    <string name="get_engine_version">机芯版本</string>
    <string name="get_engine_status">机芯状态</string>
    <string name="Ok">确定</string>
    <string name="Cancel">取消</string>
    <string name="model_define1">自定义模式1</string>
    <string name="model_define2">自定义模式2</string>
    <string name="model_define3">自定义模式3</string>
    <string name="model_save">保存至模式</string>
    <string name="color_mode">亮度模式</string>
    <string name="model_define">自定义模式</string>
    <string name="rename_dialog">重命名</string>
    <string name="guide">模式设置向导</string>

</resources>
