<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_about"
        android:orderInCategory="100"
        android:title="@string/about"
        android:icon="@drawable/setting_on"
        android:visible="true">
    </item>
    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="100"
        android:title="@string/pref_setting"
        android:icon="@drawable/setting_on"
        android:visible="true">
    </item>
    <item
        android:id="@+id/menu_item_system_info"
        android:orderInCategory="100"
        android:title="@string/pref_get_system_info"
        android:icon="@drawable/setting_on"
        android:visible="true">
    </item>
    <item
        android:id="@+id/menu_item_set_network"
        android:orderInCategory="100"
        android:title="@string/pref_set_network"
        android:icon="@drawable/setting_on"
        android:visible="true">
    </item>
</menu>