<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vclord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yangjiyu.myapplication.VclordActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VCLORD_IP"
        android:textSize="20dp"
        android:id="@+id/editText" />
    <com.example.yangjiyu.myapplication.IPEditText
        android:id="@+id/iptext"
        android:layout_height="30dp"
        android:layout_width="340dp"
        android:layout_alignParentLeft="true"
        />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/SystemInfo"
    android:textSize="20dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vclord_ip"
        android:scrollbarSize="30dp"
        android:entries="@array/languages">
    </Spinner>
    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_vclord_connect"
        android:textStyle="bold" />

</LinearLayout>
</RelativeLayout>
